# aoc21

./: LICENSE  README.md  aoc21.cabal
app/: AocUtil.hs  Main.hs
app/day01/: Day01.hs  test.txt
app/day02/: Day02.hs  test.txt
app/day03/: Day03.hs  test.txt
app/day04/: Day04.hs
