cabal-version:      2.4
name:               aoc21
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Veikka Kähkönen

extra-source-files:
    README.md

executable aoc
    main-is: Main.hs
    other-modules:
        Day01,
        Day02,
        Day03
    build-depends:
        base ^>=4.14.3.0,
    hs-source-dirs:
        app,
        app/day01,
        app/day02,
        app/day03
    default-language: Haskell2010
